Ran formatter